Ajout de l'entity ImageIllustration

--- a/src/VintageWest/AdminBundle/Resources/views/ImageIllustration/new.html.twig
+++ b/src/VintageWest/AdminBundle/Resources/views/ImageIllustration/new.html.twig
@@ -1,13 +1,13 @@
 {% extends '::admin_base.html.twig' %}
 
 {% block body -%}
-    <h1>Car creation</h1>
+    <h1>ImageIllustration creation</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('car') }}">
+        <a href="{{ path('imageillustration') }}">
             Back to the list
         </a>
     </li>
