--- a/src/VintageWest/AdminBundle/Resources/views/ImageIllustration/edit.html.twig
+++ b/src/VintageWest/AdminBundle/Resources/views/ImageIllustration/edit.html.twig
@@ -1,15 +1,16 @@
 {% extends '::admin_base.html.twig' %}
 
 {% block body -%}
-    <h1>Car creation</h1>
+    <h1>ImageIllustration edit</h1>
 
-    {{ form(form) }}
+    {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('car') }}">
+        <a href="{{ path('imageillustration') }}">
             Back to the list
         </a>
     </li>
+    <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
