--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -6,11 +6,49 @@
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/bootstrap.css') }}" type="text/css" media="all" />
-    <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/bootstrap-responsive.css') }}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/sb-admin.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/font-awesome/css/font-awesome.css') }}">
+
 </head>
 <body>
-aze
+<div id="wrapper">
+
+    <!-- Sidebar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">SB Admin</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav side-nav">
+                <li><a href="{{ path('car') }}"><i class=""></i>Les combis</a></li>
+                <li><a href="{{ path('equipement') }}"><i class=""></i>Les équipements</a></li>
+                <li><a href="{{ path('imageillustration') }}"><i class=""></i>Gestion des images</a></li>
+
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right navbar-user">
+                <li class="dropdown messages-dropdown">
+                   <a href="#">voir le site</a>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </nav>
+
 {% block body %}{% endblock %}
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    <script src="{{ asset('bundles/vintagewestadmin/js/jquery-1.10.2.js') }}"></script>
+    <script src="{{ asset('bundles/vintagewestadmin/js/bootstrap.js') }}"></script>
+    <script src="{{ asset('bundles/vintagewestadmin/js/script.js') }}"></script>
+{% endblock %}
+</div>
 </body>
 </html>
