--- a/src/VintageWest/AdminBundle/Resources/views/Car/show.html.twig
+++ b/src/VintageWest/AdminBundle/Resources/views/Car/show.html.twig
@@ -1,7 +1,7 @@
 {% extends '::admin_base.html.twig' %}
 
 {% block body -%}
-    <h1>Car</h1>
+    <h1>Les combis</h1>
 
     <table class="record_properties">
         <tbody>
