entity news & entity Language

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -75,5 +75,12 @@
             <script src="{{ asset('bundles/vintagewestfront/js/coin-slider/coin-slider.js') }}"></script>
             <script src="{{ asset('bundles/vintagewestfront/js/main.js') }}"></script>
         {% endblock %}
+<div id="container-footer-large">
+    <div class="container">
+        <footer>
+
+        </footer>
+    </div>
+</div>
     </body>
 </html>
