--- a/src/VintageWest/AdminBundle/Resources/views/Car/show.html.twig
+++ b/src/VintageWest/AdminBundle/Resources/views/Car/show.html.twig
@@ -50,16 +50,8 @@
                 <td>{{ entity.imgUrl }}</td>
             </tr>
             <tr>
-                <th>Descriptionfr</th>
-                <td>{{ entity.descriptionFr }}</td>
-            </tr>
-            <tr>
-                <th>Descriptionen</th>
-                <td>{{ entity.descriptionEn }}</td>
-            </tr>
-            <tr>
-                <th>Descriptiones</th>
-                <td>{{ entity.descriptionEs }}</td>
+                <th>Description</th>
+                <td>{{ entity.description }}</td>
             </tr>
         </tbody>
     </table>
