--- a/src/VintageWest/AdminBundle/Resources/views/Equipement/show.html.twig
+++ b/src/VintageWest/AdminBundle/Resources/views/Equipement/show.html.twig
@@ -10,28 +10,12 @@
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
-                <th>Namefr</th>
-                <td>{{ entity.nameFr }}</td>
+                <th>Name</th>
+                <td>{{ entity.name }}</td>
             </tr>
             <tr>
-                <th>Nameen</th>
-                <td>{{ entity.nameEn }}</td>
-            </tr>
-            <tr>
-                <th>Namees</th>
-                <td>{{ entity.nameEs }}</td>
-            </tr>
-            <tr>
-                <th>Descriptionfr</th>
-                <td>{{ entity.descriptionFr }}</td>
-            </tr>
-            <tr>
-                <th>Descriptionen</th>
-                <td>{{ entity.descriptionEn }}</td>
-            </tr>
-            <tr>
-                <th>Descriptiones</th>
-                <td>{{ entity.descriptionEs }}</td>
+                <th>Description</th>
+                <td>{{ entity.description }}</td>
             </tr>
             <tr>
                 <th>Imgurl</th>
