--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -24,7 +24,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="{{ path('car') }}">Les Combis</a></li>
-                        <li class="active"><a href="#">Les news</a></li>
+                        <li class="active"><a href="{{ path('news') }}">Les news</a></li>
                         <li class="active"><a href="{{ path('imageillustration') }}">Les images</a></li>
                         <li class="active"><a href="{{ path('equipement') }}">Les équipements</a></li>
                         <li class="active"><a href="{{ path('language') }}">Les langues</a></li>
