--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -27,6 +27,7 @@
                         <li class="active"><a href="{{ path('news') }}">Les news</a></li>
                         <li class="active"><a href="{{ path('imageillustration') }}">Les images</a></li>
                         <li class="active"><a href="{{ path('equipement') }}">Les équipements</a></li>
+                        <li class="active"><a href="{{ path('prestations') }}">Les prestations</a></li>
                         <li class="active"><a href="{{ path('language') }}">Les langues</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
