--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/bootstrap.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/responsive-responsive.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/font-awesome/css/font-awesome.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/sb-admin.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/vintagewestadmin/css/style.css') }}">
 </head>
 <body>
