--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -28,6 +28,7 @@
                         <li class="active"><a href="{{ path('news') }}">Les news</a></li>
                         <li class="active"><a href="{{ path('imageillustration') }}">Les images</a></li>
                         <li class="active"><a href="{{ path('equipement') }}">Les équipements</a></li>
+                        <li class="active"><a href="{{ path('page') }}">Les pages</a></li>
                         <li class="active"><a href="{{ path('language') }}">Les langues</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -35,7 +36,9 @@
         </div>
     </div>
     <div class="container">
-        {% block body %}{% endblock %}
+        {% block body %}
+
+        {% endblock %}
     </div>
 </div>
 
