Implémnetation interface admin Travail sur le front

--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -41,8 +41,8 @@
                 <li class="active"><a href="{{ path('admin_index') }}"><i class="fa fa-bullseye"></i> Accueil</a></li>
                 <li><a href="{{ path('car') }}"><i class="fa fa-dashboard"></i> Les combis</a></li>
                 <li><a href="{{ path('news') }}"><i class="fa fa-bullhorn"></i> Les news</a></li>
-                <li><a href="{{ path('news') }}"><i class="fa fa-cogs"></i> Les équipements</a></li>
-                <li><a href="{{ path('news') }}"><i class="fa fa-calendar-o"></i> Les prestations</a></li>
+                <li><a href="{{ path('equipement') }}"><i class="fa fa-cogs"></i> Les équipements</a></li>
+                <li><a href="{{ path('prestation') }}"><i class="fa fa-calendar-o"></i> Les prestations</a></li>
                 <li><a href="#"><i class="fa fa-edit"></i> Les commentaires</a></li>
                 <li><a href="{{ path('imageillustration') }}"><i class="fa fa-picture-o"></i> Les images</a></li>
 
